# pycheckers

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  publish.yml  tests.yml
benchmarks/: benchmark_move_generation.py
docs/: api.md  index.md  rulesets.md
notebooks/: primitive_move_catalog.ipynb  pycheckers_package_demo.ipynb  rules_and_board_validation.ipynb
notebooks/dev/: checkers_bitboard_demo.ipynb  quiet_checkers_path_count_analysis.ipynb  quiet_notebook_live.py
scripts/: quiet_exploration_dashboard.py  run_quiet_exploration.py
src/clatsop/: __init__.py  encoding.py  ruleset.py
src/pycheckers/: __init__.py  bitboard.py  display.py  encoding.py  quiet.py  rules.py  ruleset.py  state.py  tablebase.py
tests/: test_legacy_regression.py  test_native_api.py  test_package_api.py
